# feedguard

./: .gitignore  AGENTS.md  README.md  config.example.yaml  opencode.json  package.json
docs/: architecture.md
python/: pyproject.toml
python/html_cleaner/: __init__.py  cleaner.py
src/cli/: index.ts
src/cli/commands/: auth.ts  cleaner.ts  run.ts
src/core/: browser.ts  config.ts  persistence.ts
src/types/: post.ts
src/utils/: html_cleaner.ts  prompt.ts
tests/core/: config.test.ts
tests/fixtures/config/: invalid-filters-type.yaml  invalid-limit-type.yaml  invalid-missing-handle.yaml  invalid-missing-platform.yaml  invalid-negative-limit.yaml  invalid-number-handle.yaml  invalid-string-limit.yaml  invalid-yaml-syntax.yaml  invalid-zero-limit.yaml  valid-extra-keys.yaml  valid-multiple-sources.yaml  valid-no-filters.yaml  valid-twitter-source.yaml  valid-with-extra-fields.yaml
